--- a/Rorschach/public_html/login.html
+++ b/Rorschach/public_html/login.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!-- Disponivel em https://www.w3schools.com/w3css/tryw3css_examples_modal_login.htm-->
 <html>
 <title>Rorschach</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
